# libcmt-binding-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  cartesi.echoApp.toml  wrapper.h
sample_apps/echo_app/: Cargo.toml  Dockerfile
sample_apps/echo_app/src/: main.rs
sample_apps/sample_app/: Dockerfile
src/: abi.rs  buf.rs  io.rs  keccak.rs  lib.rs  merkle.rs  rollup.rs  util.rs
