[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
libcmt-binding-rust = { git = "https://github.com/Mugen-Builders/libcmt-binding-rust.git", rev = "7076f94" }
